--- a/home.html
+++ b/home.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="kr">
     <head>
-        <title>Home-My first website.</title>
+        <link rel="shortcut icon" href="https://nomadcoders.co/m.png">
+        <title>Greatest Albums</title>
+        <meta charset="utf-8">
+        <meta name="description" content="Greatest Albums of All Time">
     </head>
     <body>
-        <h1>Hello!</h1>
-        <a href="http://google.com" target="_blank">Go to google</a>
-        <img src=""/>
+        <h1>Greatest Albums of All Time</h1>
+        <div>
+            <a href="http://google.com" target="_blank">Go to google</a>
+        </div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/5/55/LaurynHillTheMiseducationofLaurynHillalbumcover.jpg"/>
     </body>
 </html>
