--- a/home.html
+++ b/home.html
@@ -2,15 +2,19 @@
 <html lang="kr">
     <head>
         <link rel="shortcut icon" href="https://nomadcoders.co/m.png">
-        <title>Greatest Albums</title>
+        <title>Sign In</title>
         <meta charset="utf-8">
-        <meta name="description" content="Greatest Albums of All Time">
+        <meta name="description" content="sign-in page">
     </head>
     <body>
-        <h1>Greatest Albums of All Time</h1>
-        <div>
-            <a href="http://google.com" target="_blank">Go to google</a>
-        </div>
-        <img src="https://upload.wikimedia.org/wikipedia/en/5/55/LaurynHillTheMiseducationofLaurynHillalbumcover.jpg"/>
+        <h1>Sign In</h1>
+        <form>
+            <input type="file" accept="image"/>
+            <input placeholder="First Name" required/>
+            <input placeholder="Last Name" required/>
+            <input placeholder="Username" required/>
+            <input type="password" placeholder="Password" required minlength="10"/>
+            <input type="submit" value="Create Account"/>
+        </form>
     </body>
 </html>
