--- a/home.html
+++ b/home.html
@@ -11,15 +11,14 @@
         <form>
             <label for="profile">Profile Photo</label>
             <input id="profile" type="file" accept=".png, .pdf"/>
-
-            <label for="first-name">First Name</label>
-            <input id="first-name" placeholder="First Name" required/>
-            <label for="last-name">Last Name</label>
-            <input id="last-name" placeholder="Last Name" required/>
-            <label for="user-name">User Name</label>
-            <input id="user-name" placeholder="Username" required/>
-            <label for="password">Password</label>
-            <input id="password" type="password" placeholder="Password" required minlength="10"/>
+            <div><label for="first-name">First Name</label>
+            <input id="first-name" placeholder="First Name" required/></div>
+            <div><label for="last-name">Last Name</label>
+            <input id="last-name" placeholder="Last Name" required/></div>
+            <div><label for="user-name">User Name</label>
+            <input id="user-name" placeholder="Username" required/></div>
+            <div><label for="password">Password</label>
+            <input id="password" type="password" placeholder="Password" required minlength="10"/></div>
             <input type="submit" value="Create Account"/>
         </form>
     </body>
