--- a/home.html
+++ b/home.html
@@ -7,22 +7,13 @@
         <meta name="description" content="sign-up page">
     </head>
     <body>
-        <h1>Sign Up</h1>
-        <form>
-            <label for="profile">Profile Photo</label>
-            <input id="profile" type="file" accept=".png, .pdf"/>
-            <div><label for="first-name">First Name</label>
-            <input id="first-name" placeholder="First Name" required/></div>
-            <div><label for="last-name">Last Name</label>
-            <input id="last-name" placeholder="Last Name" required/></div>
-            <div><label for="user-name">User Name</label>
-            <input id="user-name" placeholder="Username" required/></div>
-            <div><label for="password">Password</label>
-            <input id="password" type="password" placeholder="Password" required minlength="10"/></div>
-            <input type="submit" value="Create Account"/>
-        </form>
+        <header><h1>The Andy Times</h1></header>
+
+        <main><p>Stay calm and keep going!</p></main>
+
+        <footer>2020.N.D.</footer>
     </body>
 </html>
 
-//id는 body안에 어떤 태그에도 넣을 수 있다. 단, 태그마다 하나의 id만 가질 수 있고
-//동일한 id를 두개 이상의 태그가 동시에 가질수 없다. 한 id는 한 태그만 갖고 있어야 함.
+//div=header, main, footer
+//span=address
