--- a/home.html
+++ b/home.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="kr">
     <head>
-        <link rel="shortcut icon" href="https://nomadcoders.co/m.png">
-        <title>Sign Up</title>
         <meta charset="utf-8">
-        <meta name="description" content="sign-up page">
+        <title>The Andy Times</title>
+        <style>
+            h1{
+                font-size:50px;
+                color:yellowgreen;
+            }
+        </style>
     </head>
     <body>
         <header><h1>The Andy Times</h1></header>
 
-        <main><p>Stay calm and keep going!</p></main>
+        <main><span>Stay calm and keep going!</span></main>
 
         <footer>2020.N.D.</footer>
     </body>
