blocks and inlines
span, a, image are inlines.

--- a/home.html
+++ b/home.html
@@ -4,20 +4,29 @@
         <meta charset="utf-8">
         <title>The Andy Times</title>
         <style>
-            h1{
-                font-size:50px;
-                color:yellowgreen;
+            div{
+                height:150px;
+                width:150px;
+                background-color: tomato;
+            }
+            span{
+                background-color: turquoise;
             }
         </style>
     </head>
     <body>
-        <header><h1>The Andy Times</h1></header>
-
-        <main><span>Stay calm and keep going!</span></main>
-
-        <footer>2020.N.D.</footer>
+        <div></div>
+        <div></div>
+        <div></div>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <a href="#">link</a>
+        <span>hello</span>
     </body>
 </html>
 
-//div=header, main, footer
+//div=header, main, section, article, footer
 //span=address
+
+//inline= a, span, image
