--- a/home.html
+++ b/home.html
@@ -4,29 +4,20 @@
         <meta charset="utf-8">
         <title>The Andy Times</title>
         <style>
+            html{
+                background-color: tomato;
+            }
+            body{
+                background-color: thistle;
+            }
             div{
                 height:150px;
                 width:150px;
-                background-color: tomato;
-            }
-            span{
-                background-color: turquoise;
+                background-color: white;
             }
         </style>
     </head>
     <body>
         <div></div>
-        <div></div>
-        <div></div>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <a href="#">link</a>
-        <span>hello</span>
     </body>
 </html>
-
-//div=header, main, section, article, footer
-//span=address
-
-//inline= a, span, image
