margin of body 2

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
             }
             body{
                 background-color: thistle;
+                margin:0px;
             }
             div{
                 height:150px;
