--- a/home.html
+++ b/home.html
@@ -9,9 +9,10 @@
             }
             body{
                 background-color: thistle;
-                margin:0px;
+                margin: 20px 5px 12px 99px;
             }
             div{
+                margin-left: 50px;
                 height:150px;
                 width:150px;
                 background-color: white;
