--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
                 margin: 20px 5px 12px 99px;
             }
             div{
-                margin-left: 50px;
+                margin: 20px 15px;
                 height:150px;
                 width:150px;
                 background-color: white;
