--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
             }
             body{
                 background-color: thistle;
-                margin: 20px 5px 12px 99px;
+                margin: 0;
             }
             div{
                 margin: 50px 15px;
