--- a/home.html
+++ b/home.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="utf-8">
         <style>
+            *{
+                border:2px solid black;
+            }
             html{
                 background-color: tomato;
+                border:0px;
             }
             body{
                 margin:0px;
@@ -12,7 +16,7 @@
                 background-color: thistle;
             }
             div{
-                padding:15px;
+                padding:13px;
             }
             #first{
                 height: 150px;
@@ -29,18 +33,12 @@
                 height: 90px;
                 width:90px;
             }
-            #fourth{
-                background-color: chartreuse;
-                height:60px;
-                width:60px;
-            }
         </style>
     </head>
     <body>
         <div id="first">
             <div id="second">
                 <div id="third">
-                    <div id="fourth"></div>
                 </div>
             </div>
         </div>
