border of inline

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <style>
             *{
-                border:2px solid black;
+                border:2px dashed black;
             }
             html{
                 background-color: tomato;
@@ -33,12 +33,16 @@
                 height: 90px;
                 width:90px;
             }
+            span{
+                border-style: dotted;
+            }
         </style>
     </head>
     <body>
         <div id="first">
             <div id="second">
                 <div id="third">
+                    <span>hello</span>
                 </div>
             </div>
         </div>
