--- a/home.html
+++ b/home.html
@@ -4,16 +4,25 @@
         <meta charset="utf-8">
         <style>
             body{
-                margin:0px;
+                margin:20px;
             }
             span{
-                background-color: thistle;
-                padding:20px;
+                background-color: teal;
+            }
+            .tomato{
+                background-color: tomato;
+                color:white;
+                padding:5px 10px;
+                border-radius: 5px;
             }
         </style>
     </head>
     <body>
         <span>hello</span>
+        <span class="tomato">hello</span>
+        <span>hello</span>
+        <span class="tomato">hello</span>
+        <span>hello</span>
+        <span class="tomato">hello</span>
     </body>
 </html>
-
