--- a/home.html
+++ b/home.html
@@ -6,23 +6,26 @@
             body{
                 margin:20px;
             }
-            span{
+            .btn{
+                padding:5px 10px;
+                border-radius: 5px;
+            }
+            .teal{
                 background-color: teal;
+                color:black;
             }
             .tomato{
                 background-color: tomato;
                 color:white;
-                padding:5px 10px;
-                border-radius: 5px;
             }
         </style>
     </head>
     <body>
-        <span>hello</span>
-        <span class="tomato">hello</span>
-        <span>hello</span>
-        <span class="tomato">hello</span>
-        <span>hello</span>
-        <span class="tomato">hello</span>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
     </body>
 </html>
