--- a/home.html
+++ b/home.html
@@ -2,22 +2,37 @@
 <html lang="kr">
     <head>
         <meta charset="utf-8">
+        <title>The Andy Times</title>
         <style>
             body{
+                height: 100vh;
                 margin:20px;
+                display:flex;
+                justify-content:center;
+                align-items: center;
+                flex-wrap: wrap;
+                flex-direction: column;
             }
             div{
-                display: inline-block;
-                width:300px;
-                height: 300px;
+                border: 3px solid black;
+                margin: 5px;
+                display:flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 50px;
+                color:white;
+                height:150px;
+                width:150px;
                 background-color: teal;
-                margin-right: 10.015px;
+            }
+            #second{
+                background-color: wheat;
             }
         </style>
     </head>
     <body>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>1</div>
+        <div id="second">2</div>
+        <div>3</div>
     </body>
 </html>
