--- a/home.html
+++ b/home.html
@@ -5,34 +5,23 @@
         <title>The Andy Times</title>
         <style>
             body{
-                height: 100vh;
+                height: 1000vh;
                 margin:20px;
-                display:flex;
-                justify-content:center;
-                align-items: center;
-                flex-wrap: wrap;
-                flex-direction: column;
             }
             div{
-                border: 3px solid black;
-                margin: 5px;
-                display:flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 50px;
-                color:white;
-                height:150px;
-                width:150px;
+                width:300px;
+                height: 300px;
                 background-color: teal;
             }
-            #second{
+            #under{
+                position:fixed;
                 background-color: wheat;
+                width: 350px;
             }
         </style>
     </head>
     <body>
-        <div>1</div>
-        <div id="second">2</div>
-        <div>3</div>
+        <div></div>
+        <div id="under"></div>
     </body>
 </html>
